force-app/main/default/objects/Account/fields/COMM_AffiliateCategory__c.field-meta.xml
<CustomField>
    <fullName>COMM_AffiliateCategory__c</fullName>
    <label>Affiliate Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_AccountCategory</valueSetName>
    </valueSet>
</CustomField>