force-app/main/default/objects/Account/fields/COMM_Airport__c.field-meta.xml
<CustomField>
    <fullName>COMM_Airport__c</fullName>
    <description>Airports that the client will have access</description>
    <label>Airport</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_Airport</valueSetName>
    </valueSet>
</CustomField>