force-app/main/default/objects/Account/fields/COMM_BillingFirstName__c.field-meta.xml
<CustomField>
    <fullName>COMM_BillingFirstName__c</fullName>
    <description>First Name of the Person the Billing will be associated with.</description>
    <label>Billing First Name</label>
    <length>34</length>
    <type>Text</type>
</CustomField>