force-app/main/default/objects/Account/fields/COMM_BillingLastName__c.field-meta.xml
<CustomField>
    <fullName>COMM_BillingLastName__c</fullName>
    <description>Last Name of the Person the Billing will be associated with</description>
    <label>Billing Last Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>