force-app/main/default/objects/Account/fields/COMM_CompanyBillingAddress__c.field-meta.xml
<CustomField>
    <fullName>COMM_CompanyBillingAddress__c</fullName>
    <description>Billing Address of the Company the Person associated with the Person Account belongs to. For use in billing.</description>
    <label>Company Billing Address</label>
    <type>Address</type>
</CustomField>