force-app/main/default/objects/Account/fields/COMM_CompanyName__c.field-meta.xml
<CustomField>
    <fullName>COMM_CompanyName__c</fullName>
    <description>Name of the Company the Person associated with the Person Account belongs to. For use in billing.</description>
    <label>Company Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>