force-app/main/default/objects/Account/fields/COMM_CompanyVATNumber__c.field-meta.xml
<CustomField>
    <fullName>COMM_CompanyVATNumber__c</fullName>
    <description>VAT Number of the Company the Person associated with the Person Account belongs to. For use in billing.</description>
    <label>Company VAT Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>