force-app/main/default/objects/Account/fields/COMM_GDPRConsent__c.field-meta.xml
<CustomField>
    <fullName>COMM_GDPRConsent__c</fullName>
    <description>Picklist that indicates if the account accepts the GDPR terms</description>
    <label>GDPR Consent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_Confirmation</valueSetName>
    </valueSet>
</CustomField>