force-app/main/default/objects/Account/fields/COMM_IndividualStaff__c.field-meta.xml
<CustomField>
    <fullName>COMM_IndividualStaff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked indicates that this account will be able to see in Commerce the products with the checkbox “Requires Airport Staff”checked</description>
    <label>Individual Staff?</label>
    <type>Checkbox</type>
</CustomField>