force-app/main/default/objects/Account/fields/COMM_IsAffiliate__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsAffiliate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In this field, the ANA Admin chooses whether the account type is an affiliate or not</description>
    <label>Is Affiliate?</label>
    <type>Checkbox</type>
</CustomField>