force-app/main/default/objects/Account/fields/COMM_IsPartner__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In this field, the ANA Admin chooses whether the account type is an subscription partner or not</description>
    <label>Is Partner?</label>
    <type>Checkbox</type>
</CustomField>