force-app/main/default/objects/Account/fields/COMM_IsReseller__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsReseller__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked indicates that this account will be able to sell products for resellers</description>
    <label>Is Reseller?</label>
    <type>Checkbox</type>
</CustomField>