force-app/main/default/objects/Account/fields/COMM_LicensePlate__c.field-meta.xml
<CustomField>
    <fullName>COMM_LicensePlate__c</fullName>
    <label>License Plate</label>
    <length>8</length>
    <type>Text</type>
</CustomField>