force-app/main/default/objects/Account/fields/COMM_MarketingAndCommunicationConsent__c.field-meta.xml
<CustomField>
    <fullName>COMM_MarketingAndCommunicationConsent__c</fullName>
    <description>Picklist that indicates if the account accepts to receive Marketing and communication content</description>
    <label>Marketing Communications Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_Confirmation</valueSetName>
    </valueSet>
</CustomField>