force-app/main/default/objects/Account/fields/COMM_ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>COMM_ParentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field containing related Parent Account</description>
    <label>Affiliate Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>