force-app/main/default/objects/Account/fields/COMM_ParentAccountIsAffiliate__c.field-meta.xml
<CustomField>
    <fullName>COMM_ParentAccountIsAffiliate__c</fullName>
    <description>Indicate if Parent Account is an affiliate</description>
    <formula>COMM_ParentAccount__r.COMM_IsAffiliate__c</formula>
    <label>Parent Account is Affiliate</label>
    <type>Checkbox</type>
</CustomField>