force-app/main/default/objects/Account/fields/COMM_PartnerCategory__c.field-meta.xml
<CustomField>
    <fullName>COMM_PartnerCategory__c</fullName>
    <description>Field used to Categorize the Account that is a ANA Partner</description>
    <label>Partner Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_AccountCategory</valueSetName>
    </valueSet>
</CustomField>