force-app/main/default/objects/Account/fields/COMM_PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>COMM_PaymentMethod__c</fullName>
    <description>In this field, the ANA Admin defines the payment method associated to the account</description>
    <inlineHelpText>The Affiliates can pay by cash or credit
Partners can pay by cash, credit or/and courtesy
B2C can only pay by cash</inlineHelpText>
    <label>Payment Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VD</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Courtesy</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
                <isActive>false</isActive>
                <label>Cash</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>