force-app/main/default/objects/Account/fields/COMM_PaymentRenewal__c.field-meta.xml
<CustomField>
    <fullName>COMM_PaymentRenewal__c</fullName>
    <description>Used to categorize the payment type for subscriptions</description>
    <label>Payment renewal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>