force-app/main/default/objects/Account/fields/COMM_PreferredContact__c.field-meta.xml
<CustomField>
    <fullName>COMM_PreferredContact__c</fullName>
    <description>The preferred contact method (e-mail or phone)</description>
    <label>Preferred Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Mail</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>