force-app/main/default/objects/Account/fields/COMM_ResellerId__c.field-meta.xml
<CustomField>
    <fullName>COMM_ResellerId__c</fullName>
    <description>Field containing the reseller id for the account</description>
    <label>Reseller Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>