force-app/main/default/objects/Account/fields/COMM_SecondaryLicensePlate__c.field-meta.xml
<CustomField>
    <fullName>COMM_SecondaryLicensePlate__c</fullName>
    <label>Secondary License Plate</label>
    <length>8</length>
    <type>Text</type>
</CustomField>