force-app/main/default/objects/Account/fields/COMM_StaffCompanyRatio__c.field-meta.xml
<CustomField>
    <fullName>COMM_StaffCompanyRatio__c</fullName>
    <description>Ratio defined for the company when generating monthly invoice for Subscriptions of Staff Company Sub-Category</description>
    <inlineHelpText>X/Y - For every Y invoiced Subscriptions, X Subscriptions will be invoiced full price.</inlineHelpText>
    <label>Ratio for Staff Company</label>
    <length>3</length>
    <type>Text</type>
</CustomField>