force-app/main/default/objects/Account/fields/COMM_VATNumberWithCode__c.field-meta.xml
<CustomField>
    <fullName>COMM_VATNumberWithCode__c</fullName>
    <description>Formula field to obtain VAT Number with Country Code. For use in SAP invoice generation.</description>
    <formula>TEXT(BillingCountryCode) +  COMM_VATNumber__c</formula>
    <label>VAT Number (with Country Code)</label>
    <type>Text</type>
</CustomField>