force-app/main/default/objects/Account/fields/COMM_VehicleModel__c.field-meta.xml
<CustomField>
    <fullName>COMM_VehicleModel__c</fullName>
    <label>Vehicle Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>