force-app/main/default/objects/Account/fields/Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>Plate_Number__c</fullName>
    <label>Plate Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>