force-app/main/default/objects/Account/fields/Secondary_Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Vehicle_Model__c</fullName>
    <label>Secondary Vehicle Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>