force-app/main/default/objects/Account/fields/SecondaryVehicleBrand__c.field-meta.xml
<CustomField>
    <fullName>SecondaryVehicleBrand__c</fullName>
    <label>Secondary Vehicle Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>