force-app/main/default/objects/Account/recordTypes/COMM_CollectivePartner.recordType-meta.xml
<RecordType>
    <fullName>COMM_CollectivePartner</fullName>
    <active>true</active>
    <description>Record Type for Collective / Partner Accounts.</description>
    <label>Collective/Partner</label>
</RecordType>