force-app/main/default/objects/Account/validationRules/COMM_RestrictNameChangeforPartnerUsers.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_RestrictNameChangeforPartnerUsers</fullName>
    <active>true</active>
    <description>This will prevent Partner users changing the Name field</description>
    <errorConditionFormula>AND(
    ISCHANGED(Name),
    OR(
        $Profile.Name = &quot;Customer Community Plus Login User&quot;,
        $Profile.Name = &quot;Customer Community Plus User&quot;
    )
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You are not allowed to change the Name field as a Partner User. Please contact your administrator if you need assistance.</errorMessage>
</ValidationRule>