force-app/main/default/objects/Account/validationRules/COMM_StaffCompanyRatioFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_StaffCompanyRatioFormat</fullName>
    <active>true</active>
    <description>Ratio must be in format X/Y to be valid</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(COMM_StaffCompanyRatio__c)),
OR(
  NOT(REGEX(COMM_StaffCompanyRatio__c, &quot;^[1-9]/[1-9]$&quot;)),
  VALUE(LEFT(COMM_StaffCompanyRatio__c, FIND(&quot;/&quot;, COMM_StaffCompanyRatio__c) - 1)) &gt;
  VALUE(RIGHT(COMM_StaffCompanyRatio__c, LEN(COMM_StaffCompanyRatio__c) - FIND(&quot;/&quot;, COMM_StaffCompanyRatio__c)))
))</errorConditionFormula>
    <errorDisplayField>COMM_StaffCompanyRatio__c</errorDisplayField>
    <errorMessage>Value for ratio isn&apos;t in the correct format (X/Y)</errorMessage>
</ValidationRule>