force-app/main/default/objects/Account/validationRules/COMM_VerifyAffiliateFields.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyAffiliateFields</fullName>
    <active>true</active>
    <description>Validates if Affiliate Category and Payment Method are set</description>
    <errorConditionFormula>OR(
AND(
COMM_IsAffiliate__c,
ISPICKVAL(COMM_AffiliateCategory__c, &apos;&apos;)
),
AND(
COMM_IsAffiliate__c,
ISBLANK(COMM_PaymentMethod__c)
)
)</errorConditionFormula>
    <errorMessage>Fill in the Affiliate Category and Payment Method fields</errorMessage>
</ValidationRule>