force-app/main/default/objects/Account/validationRules/COMM_VerifyAffiliatePaymentMethods.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyAffiliatePaymentMethods</fullName>
    <active>true</active>
    <description>Validates if Affiliate Payment Method is VD or Credit</description>
    <errorConditionFormula>AND(
COMM_IsAffiliate__c,
INCLUDES(COMM_PaymentMethod__c , &apos;Courtesy&apos;))</errorConditionFormula>
    <errorDisplayField>COMM_PaymentMethod__c</errorDisplayField>
    <errorMessage>Affiliates can only pay by VD or credit</errorMessage>
</ValidationRule>