force-app/main/default/objects/Account/validationRules/COMM_VerifyB2CPaymentMethods.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyB2CPaymentMethods</fullName>
    <active>true</active>
    <description>Validates if B2C Payment Method is VD</description>
    <errorConditionFormula>AND(
ISPICKVAL(Type, &apos;Individual&apos;),
OR(
INCLUDES(COMM_PaymentMethod__c , &apos;Courtesy&apos;),
INCLUDES(COMM_PaymentMethod__c , &apos;Credit&apos;)))</errorConditionFormula>
    <errorDisplayField>COMM_PaymentMethod__c</errorDisplayField>
    <errorMessage>B2C can only pay by VD</errorMessage>
</ValidationRule>