force-app/main/default/objects/Account/validationRules/COMM_VerifyPartnerFields.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyPartnerFields</fullName>
    <active>true</active>
    <description>Validates if Email, Payment Method and Airport are set</description>
    <errorConditionFormula>OR(
				AND(
        COMM_IsPartner__c,
        NOT(ISPICKVAL(Type, &apos;Partner&apos;))
    ),
    AND(
        COMM_IsPartner__c,
        ISBLANK(COMM_PaymentMethod__c)
    ),
    AND(
        COMM_IsPartner__c,
        ISBLANK(COMM_Airport__c)
    ),
    AND(
        COMM_IsPartner__c,
        ISBLANK(COMM_Email__c)
    )
)</errorConditionFormula>
    <errorMessage>Fill in the Email, Payment Method and Airport fields and check if type is Partner.</errorMessage>
</ValidationRule>