force-app/main/default/objects/Account/validationRules/COMM_VerifyPartnerPaymentMethods.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyPartnerPaymentMethods</fullName>
    <active>true</active>
    <description>Validates if Partner Payment Method is Courtesy or Credit</description>
    <errorConditionFormula>AND(
COMM_IsPartner__c,
INCLUDES(COMM_PaymentMethod__c , &apos;VD&apos;))</errorConditionFormula>
    <errorDisplayField>COMM_PaymentMethod__c</errorDisplayField>
    <errorMessage>Partner can only pay by courtesy or credit</errorMessage>
</ValidationRule>