force-app/main/default/objects/Account/validationRules/COMM_VerifyPartnerType.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyPartnerType</fullName>
    <active>true</active>
    <description>Validates if  is Partner? checkbox is filled when is chosen the value Partner in Type picklist.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Type, &apos;Partner&apos;),
NOT(COMM_IsPartner__c)
)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>Please check in the &quot;Is Partner?&quot; checkbox.</errorMessage>
</ValidationRule>