force-app/main/default/objects/Account/validationRules/COMM_VerifyPreferredFields.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyPreferredFields</fullName>
    <active>true</active>
    <description>When Preferred Contact field = Phone or Email , Phone or Email field must have a value on it and cannot be blank.</description>
    <errorConditionFormula>OR(
    AND(
        ISPICKVAL(COMM_PreferredContact__c, &apos;Phone&apos;),
        ISBLANK(Phone)
    ),
    AND(
        ISPICKVAL(COMM_PreferredContact__c, &apos;E-Mail&apos;),
        OR(
            RecordType.Name = &apos;Individual&apos; &amp;&amp; ISBLANK(PersonEmail),
            RecordType.Name = &apos;Collective/Partner&apos; &amp;&amp; ISBLANK(COMM_Email__c)
        )
    )
)</errorConditionFormula>
    <errorMessage>When Preferred Contact field = Phone or Email , Phone or Email field must have a value on it and cannot be blank.</errorMessage>
</ValidationRule>